--- a/home/client/app/stocks/stock-item.tpl.html
+++ b/home/client/app/stocks/stock-item.tpl.html
@@ -1,4 +1,4 @@
-<div class="stock-item col-md-8" ng-init="fetchStocks()">
+<div class="stock-item" ng-init="fetchStocks()">
     <div class="img col-md-4"  style="background-image:url(/home/static/1.2.11/images/{{backgroundImg}})">
         <!--<img src="/home/static/1.2.11/images/amazon-logo.png"/>-->
     </div>
@@ -17,5 +17,6 @@
     <div class="more col-md-2">
         <a class="btn" href="#stock/{{stock.id}}">More</a>
     </div>
+    <div style="clear:both"></div>
 
 </div>
