--- a/login/client/app/login/login.tpl.html
+++ b/login/client/app/login/login.tpl.html
@@ -15,7 +15,8 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="user.password" required="true">
                     </div>
-                    <button type="submit" class="btn btn-default" ng-click="submit()">Submit</button>
+                    <button type="submit" class="btn btn-default" ng-click="submit()">Submit</button><br>
+                    <span class="warning">{{message}}</span>
                 </form>
             </div>
         </div>
