--- a/home/client/app/stocks/stock-item.tpl.html
+++ b/home/client/app/stocks/stock-item.tpl.html
@@ -1,6 +1,5 @@
 <div class="stock-item" ng-init="fetchStocks()">
     <div class="img col-md-4"  style="background-image:url(/home/static/1.2.11/images/{{backgroundImg}})">
-        <!--<img src="/home/static/1.2.11/images/amazon-logo.png"/>-->
     </div>
     <div class="title col-md-2">
            {{stock.name}}
@@ -8,11 +7,9 @@
     <div class="details col-md-4">
         Price : {{stock.price}} |
         Change :
-        <span ng-if="stock.prevPrice!=''">
-            {{(((stock.prevPrice - stock.price)/stock.price) * 100).toFixed(1)}} %
+        <span ng-if="stock.change">
+            {{stock.change}}
         </span>
-        <span ng-if="stock.prevPrice==''">None</span>
-
     </div>
     <div class="more col-md-2">
         <a class="btn" href="#stock/{{stock.id}}">More</a>
