--- a/home/client/app/home/home-container.tpl.html
+++ b/home/client/app/home/home-container.tpl.html
@@ -6,4 +6,5 @@
     <div ng-repeat="stock in stocks | orderBy:orderByString">
         <stock-item stock="stock"><stock-item/>
     </div>
+    <div class="warning">{{message}}</div>
 </div>
