--- a/home/client/app/home/home-container.tpl.html
+++ b/home/client/app/home/home-container.tpl.html
@@ -1,10 +1,11 @@
 <div ng-controller="homeController" class="home col-md-12" ng-init="getStocks()">
     <div class="col-md-12 btns">
         <button class="btn glyphicon {{btnClass}}" ng-click="toggleOrder()"></button>
+            <button class="btn glyphicon" ng-click="getFeed()">Get Feed</button>
+            <div>Status : {{status}}</div>
+            <div>User Info : {{userInfo}} {{demo}}</div>
+            <div>User Info2 : {{userInfo2}} {{demo}}</div>
+        
     </div>
     <div style="clear:both"></div>
-    <div ng-repeat="stock in stocks | orderBy:orderByString">
-        <stock-item stock="stock"><stock-item/>
-    </div>
-    <div class="warning">{{message}}</div>
 </div>
